fixed stories schema
